--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "songBook",
+    "name": "Nyimbo Za Kristo",
     "slug": "NyimboZaKristo",
     "version": "1.0.0",
     "orientation": "portrait",
